<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lilita_one"
        android:text="@string/header"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="222dp"
        android:layout_height="311dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ceket" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/kanit"
        android:text="@string/productFeatures"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip5"
        android:layout_width="64dp"
        android:layout_height="52dp"
        android:text="@string/sizeM"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:chipBackgroundColor="@color/white"
        app:chipCornerRadius="20dp"
        app:chipStrokeColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/chip"
        app:layout_constraintEnd_toStartOf="@+id/chip6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip"
        android:layout_width="64dp"
        android:layout_height="52dp"
        android:layout_marginTop="5dp"
        android:text="@string/sizeS"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="18sp"
        app:chipBackgroundColor="@color/white"
        app:chipCornerRadius="20dp"
        app:chipStrokeColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/chip5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip7"
        android:layout_width="64dp"
        android:layout_height="52dp"
        android:text="@string/sizeXL"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:chipBackgroundColor="@color/white"
        app:chipCornerRadius="20dp"
        app:chipStrokeColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/chip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip6" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip6"
        android:layout_width="64dp"
        android:layout_height="52dp"
        android:text="@string/sizeL"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:chipBackgroundColor="@color/white"
        app:chipCornerRadius="20dp"
        app:chipStrokeColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/chip"
        app:layout_constraintEnd_toStartOf="@+id/chip7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip5" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/secondaryCloor"
        android:fontFamily="@font/kanit"
        android:insetTop="4dp"
        android:text="@string/button"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/chip7" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip8"
        android:layout_width="124dp"
        android:layout_height="65dp"
        android:fontFamily="@font/kanit"
        android:text="@string/price"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:chipBackgroundColor="@color/thirdColor"
        app:chipCornerRadius="14dp"
        app:chipStrokeColor="@color/thirdColor"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/chip"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/kanit"
        android:text="@string/productName"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/kanit"
        android:text="@string/productSize"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/chip"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>